Add a half-done rewrite of the AdnClient

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "twig/twig": "~1.16.0"
     },
     "autoload": {
-        "classmap": ["lib/"]
+        "classmap": ["lib/"],
+        "psr-4": {
+            "Purplapp\\": "src/"
+        }
     }
 }
